Handled the Error for updating a deleted contact • Created a Error component that takes care of showing an error message to the user • Added Errorstate hook in the App component to insert a message • Added the .catch method that shows the info when a server error occur

--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -12,3 +12,13 @@ h2 {
   padding: 12px;
   margin-bottom: 12px;
 }
+
+.error {
+  border: 5px solid red;
+  border-radius: 8px;
+  background-color: lightgray;
+  font-size: 28px;
+  color: red;
+  padding: 12px;
+  margin-bottom: 12px;
+}
